--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="body">
   <header class="header">
-    <img src="https://raw.githubusercontent.com/FuYJ/F2E-midterm/master/res/NTUT-ACM.png" class="logo"/>
+    <img src="images/NTUT-ACM.png" class="logo"/>
     <ul class="ul">
       <li class="header_li">關於我們</li>
       <li class="header_li">最新消息</li>
@@ -18,15 +18,15 @@
   </header><!-- Header -->
   <article class="article_first">
     <di class="article_first_div1">
-      <img src="https://raw.githubusercontent.com/FuYJ/F2E-midterm/master/res/mainpage_bg_mainlinks_keyboard.png" class="article_first_img"/>
+      <img src="images/mainpage_bg_mainlinks_keyboard.jpg" class="article_first_img"/>
       <div class="article_first_text article_first_text_style1">分類題庫</div>
     </di>
     <di class="article_first_div2">
-      <img src="https://raw.githubusercontent.com/FuYJ/F2E-midterm/master/res/mainpage_bg_mainlinks_meeting.png" class="article_first_img"/>
+      <img src="images/mainpage_bg_mainlinks_meeting.jpg" class="article_first_img"/>
       <div class="article_first_text article_first_text_style2">討論區</div>
     </di>
     <di class="article_first_div2">
-      <img src="https://raw.githubusercontent.com/FuYJ/F2E-midterm/master/res/mainpage_bg_mainlinks_books.png" class="article_first_img"/>
+      <img src="images/mainpage_bg_mainlinks_books.jpg" class="article_first_img"/>
       <div class="article_first_text article_first_text_style2">教學資源</div>
     </di>
   </article>
