--- a/problems.html
+++ b/problems.html
@@ -8,7 +8,7 @@
     </head>
     <body class="body">
         <header class="header">
-            <a href="index.html"><img src="res/NTUT-ACM.png" class="logo"/></a>
+            <a href="index.html"><img src="images/NTUT-ACM.png" class="logo"/></a>
             <ul class="ul">
                 <a href="#">
                     <li class="header_li">關於我們</li>
@@ -32,7 +32,7 @@
         <div class="link_block clear">
             <a href="problems-greedy.html">
                 <div class="link_block_pic">
-                    <img src="res/problems_bg_greedy.png" alt="problems_bg_greedy"/>
+                    <img src="images/problems_bg_greedy.jpg" alt="problems_bg_greedy"/>
                     <div class="link_block_pic_title">Greedy</div>
                 </div>
                 <!--link_block_pic-->
@@ -66,7 +66,7 @@
                 </div>
                 <!--link_block_description-->
                 <div class="link_block_pic">
-                    <img src="res/problems_bg_dp.png" alt="problems_bg_dp"/>
+                    <img src="images/problems_bg_dp.jpg" alt="problems_bg_dp"/>
                     <div class="link_block_pic_title">Dynamic Programming（DP）</div>
                 </div>
                 <!--link_block_pic-->
@@ -76,7 +76,7 @@
         <a href="problems-dsu.html">
             <div class="link_block clear">
                 <div class="link_block_pic">
-                    <img src="res/problems_bg_dsu.png" alt="problems_bg_dsu"/>
+                    <img src="images/problems_bg_dsu.jpg" alt="problems_bg_dsu"/>
                     <div class="link_block_pic_title">Disjoint set（DSU）</div>
                 </div>
                 <!--link_block_pic-->
