--- a/resources-links.html
+++ b/resources-links.html
@@ -8,7 +8,7 @@
     </head>
     <body class="body">
         <header class="header">
-            <a href="index.html"><img src="res/NTUT-ACM.png" class="logo"/></a>
+            <a href="index.html"><img src="images/NTUT-ACM.png" class="logo"/></a>
             <ul class="ul">
                 <a href="#">
                     <li class="header_li">關於我們</li>
@@ -32,7 +32,7 @@
         <div class="link_block clear">
             <a target="_blank" href="http://www.csie.ntnu.edu.tw/~u91029/">
                 <div class="link_block_pic">
-                    <img src="res/resources_bg_algorithmnote.png" alt="resources_bg_algorithmnote"/>
+                    <img src="images/resources_bg_algorithmnote.jpg" alt="resources_bg_algorithmnote"/>
                     <div class="link_block_pic_title">演算法筆記</div>
                 </div>
                 <!--link_block_pic-->
