--- a/problems-dsu.html
+++ b/problems-dsu.html
@@ -8,7 +8,7 @@
     </head>
     <body class="body">
         <header class="header">
-            <a href="index.html"><img src="res/NTUT-ACM.png" class="logo"/></a>
+            <a href="index.html"><img src="images/NTUT-ACM.png" class="logo"/></a>
             <ul class="ul">
                 <a href="#">
                     <li class="header_li">關於我們</li>
@@ -111,14 +111,14 @@
         </div>
         <!--problems_list-->
         <div class="page_selector">
-            <div class="page_selector_button"><img src="res/icon_firstpage.png" alt="icon_firstpage" class="page_selector_button_content"/></div>
-            <div class="page_selector_button"><img src="res/icon_previouspage.png" alt="icon_previouspage" class="page_selector_button_content"/></div>
+            <div class="page_selector_button"><img src="images/icon_firstpage.png" alt="icon_firstpage" class="page_selector_button_content"/></div>
+            <div class="page_selector_button"><img src="images/icon_previouspage.png" alt="icon_previouspage" class="page_selector_button_content"/></div>
             <div class="page_selector_button"><div class="page_selector_button_content">1</div></div>
             <div class="page_selector_button"><div class="page_selector_button_content">2</div></div>
             <div class="page_selector_button"><div class="page_selector_button_content">...</div></div>
             <div class="page_selector_button"><div class="page_selector_button_content">5</div></div>
-            <div class="page_selector_button"><img src="res/icon_nextpage.png" alt="icon_nextpage" class="page_selector_button_content"/></div>
-            <div class="page_selector_button"><img src="res/icon_lastpage.png" alt="icon_lastpage" class="page_selector_button_content"/></div>
+            <div class="page_selector_button"><img src="images/icon_nextpage.png" alt="icon_nextpage" class="page_selector_button_content"/></div>
+            <div class="page_selector_button"><img src="images/icon_lastpage.png" alt="icon_lastpage" class="page_selector_button_content"/></div>
         </div>
         <footer class="footer">
             <div class="footer_web">copyright@NTUT-ACM</div>
