--- a/resources-links.html
+++ b/resources-links.html
@@ -7,26 +7,26 @@
         <link rel="stylesheet" href="css/problems_style.css"/>
     </head>
     <body class="body">
-        <header class="header">
-            <a href="index.html"><img src="images/NTUT-ACM.png" class="logo"/></a>
-            <ul class="ul">
-                <a href="#">
-                    <li class="header_li">關於我們</li>
-                </a>
-                <a href="#">
-                    <li class="header_li">最新消息</li>
-                </a>
-                <a href="problems.html">
-                    <li class="header_li">分類題庫</li>
-                </a>
-                <a href="#">
-                    <li class="header_li">討論區</li>
-                </a>
-                <a href="resources-links.html">
-                    <li class="header_li">教學資源</li>
-                </a>
-            </ul>
-        </header>
+      <header class="header">
+          <a href="index.html"><img src="images/NTUT-ACM.png" class="logo"/></a>
+          <ul class="ul">
+              <a href="aboutus.html">
+                  <li class="header_li">關於我們</li>
+              </a>
+              <a href="latestnews.html">
+                  <li class="header_li">最新消息</li>
+              </a>
+              <a href="problems.html">
+                  <li class="header_li">分類題庫</li>
+              </a>
+              <a href="chatboard.html">
+                  <li class="header_li">討論區</li>
+              </a>
+              <a href="resources-links.html">
+                  <li class="header_li">教學資源</li>
+              </a>
+          </ul>
+      </header>
         <!--header-->
         <div class="page_title">分類題庫</div>
         <div class="link_block clear">
