modify links hover effect

--- a/resources-links.html
+++ b/resources-links.html
@@ -34,6 +34,7 @@
                 <div class="link_block_pic">
                     <img src="images/resources_bg_algorithmnote.jpg" alt="resources_bg_algorithmnote"/>
                     <div class="link_block_pic_title">演算法筆記</div>
+                    <div class="link_block_pic_mask"></div>
                 </div>
                 <!--link_block_pic-->
             </a>
@@ -59,6 +60,7 @@
             <!--link_block_description-->
             <div class="link_block_pic">
                 <div class="link_block_pic_title">待補</div>
+                <div class="link_block_pic_mask"></div>
             </div>
             <!--link_block_pic-->
         </div>
@@ -66,6 +68,7 @@
         <div class="link_block clear">
             <div class="link_block_pic">
                 <div class="link_block_pic_title">待補</div>
+                <div class="link_block_pic_mask"></div>
             </div>
             <!--link_block_pic-->
             <div class="link_block_description">
