--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </di>
     </div>
     <div class="article_second_div2">
-      <div class="article_second_div2_li mouse-point">最新討論</div>
+      <a href="chatboard.html" class="link_style"><div class="article_second_div2_li mouse-point">最新討論</div></a>
       <div class="article_second_div2_div">
         <div class="article_second_div2_content">
           <div class="article_second_div2_content_text"><span class="text_color1">@102820021</span> codeforces#291的D題有沒有想法。</div>
