Added files via upload

--- a/index.html
+++ b/index.html
@@ -55,55 +55,77 @@
         <li class="article_second_div1_li">其他通知</li>
       </ul>
       <di class="article_second_div1_div">
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
-        <div class="article_second_div1_content">
-          <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
-          <div class="article_second_div1_time">2016/3/29</div>
-        </div>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
+        <a href="latestnews.html">
+          <div class="article_second_div1_content">
+            <div class="article_second_div1_text">2016/4/5(二)集會因段考停辦一次</div>
+            <div class="article_second_div1_time">2016/3/29</div>
+          </div>
+        </a>
       </di>
     </div>
     <div class="article_second_div2">
-      <a href="chatboard.html" class="link_style"><div class="article_second_div2_li mouse-point">最新討論</div></a>
-      <div class="article_second_div2_div">
-        <div class="article_second_div2_content">
-          <div class="article_second_div2_content_text"><span class="text_color1">@102820021</span> codeforces#291的D題有沒有想法。</div>
-          <div class="article_second_div2_content_time">2016/3/24</div>
-        </div>
-        <div class="article_second_div2_content">
-          <div class="article_second_div2_content_text"><span class="text_color2">@102820021</span> codeforces#291的D題有沒有想法。</div>
-          <div class="article_second_div2_content_time">2016/3/24</div>
-        </div>
-        <div class="article_second_div2_content">
-          <div class="article_second_div2_content_text"><span class="text_color3">@102820021</span> codeforces#291的D題有沒有想法。</div>
-          <div class="article_second_div2_content_time">2016/3/24</div>
-        </div>
+      <div class="article_second_div2_li mouse-point">最新討論</div>
+        <a href="chatboard.html" class="link_style">
+          <div class="article_second_div2_div">
+            <div class="article_second_div2_content">
+              <div class="article_second_div2_content_text"><span class="text_color1">@102820021</span> codeforces#291的D題有沒有想法。</div>
+            <div class="article_second_div2_content_time">2016/3/24</div>
+          </div>
+        </a>
+        <a href="chatboard.html" class="link_style">
+          <div class="article_second_div2_content">
+            <div class="article_second_div2_content_text"><span class="text_color2">@102820021</span> codeforces#291的D題有沒有想法。  </div>
+            <div class="article_second_div2_content_time">2016/3/24</div>
+          </div>
+        </a>
+        <a href="chatboard.html" class="link_style">
+          <div class="article_second_div2_content">
+            <div class="article_second_div2_content_text"><span class="text_color3">@102820021</span> codeforces#291的D題有沒有想法。</div>
+            <div class="article_second_div2_content_time">2016/3/24</div>
+          </div>
+        </a>
       </div>
     </div>
   </article>
