--- a/problems-dp.html
+++ b/problems-dp.html
@@ -10,16 +10,16 @@
         <header class="header">
             <a href="index.html"><img src="images/NTUT-ACM.png" class="logo"/></a>
             <ul class="ul">
-                <a href="#">
+                <a href="aboutus.html">
                     <li class="header_li">關於我們</li>
                 </a>
-                <a href="#">
+                <a href="latestnews.html">
                     <li class="header_li">最新消息</li>
                 </a>
                 <a href="problems.html">
                     <li class="header_li">分類題庫</li>
                 </a>
-                <a href="#">
+                <a href="chatboard.html">
                     <li class="header_li">討論區</li>
                 </a>
                 <a href="resources-links.html">
