modify problems & resources mockup & problems pages title

--- a/problems-dsu.html
+++ b/problems-dsu.html
@@ -28,7 +28,7 @@
             </ul>
         </header>
         <!--header-->
-        <div class="page_title">分類題庫-Greedy</div>
+        <div class="page_title">分類題庫-Disjoint set</div>
         <div class="problems_list clear">
             <div class="problems_list_title">
                 <div class="problems_list_title_col_id">ID</div>
